Migrate CS224n Latex Documents

--- a/ai-challenge-2024/read-embeddings.ipynb
+++ b/ai-challenge-2024/read-embeddings.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,16 +94,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.286376953125  -  L01_V002\n",
+      "0.3046875  -  L01_V021\n",
+      "     n  pts_time   fps  frame_idx\n",
+      "64  65    223.24  25.0       5581\n",
+      "0.359619140625  -  L02_V011\n",
+      "     n  pts_time   fps  frame_idx\n",
+      "77  78    305.76  25.0       7644\n",
+      "0.288330078125  -  L10_V007\n",
       "       n  pts_time   fps  frame_idx\n",
-      "165  166     734.8  25.0      18370\n"
+      "267  268     967.4  25.0      24185\n"
      ]
     }
    ],
@@ -114,7 +120,9 @@
     "import torch\n",
     "import os\n",
     "\n",
-    "texts = [\"big eyes\"]\n",
+    "texts = [\"A big pink fish figure with together with many other fish figures\",\n",
+    "         \"A doctor holding the patient hand, the doctor is wearing a black watch, the patient has white cloth wrap around an arm\",\n",
+    "         \"Big eye\"]\n",
     "\n",
     "for text in texts:\n",
     "    text_embedding = text_model.encode(text);\n",
@@ -136,14 +144,6 @@
     "    base, extension = os.path.splitext(file)\n",
     "    print(max_score, \" - \", base)\n",
     "    print(keyframes_map[base].loc[keyframes_map[base]['n'] == max_score_keyframe_idx + 1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "a doctor holding the patient hand, the doctor is wearing a black watch, the patient has white cloth wrap around an arm\n",
-    "a big pink fish figure with together with many other fish figures"
    ]
   },
   {
