--- a/ai-challenge-2024/read-embeddings.ipynb
+++ b/ai-challenge-2024/read-embeddings.ipynb
@@ -2,17 +2,76 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ADMIN\\anaconda3\\Lib\\site-packages\\sentence_transformers\\cross_encoder\\CrossEncoder.py:11: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm, trange\n"
+      "c:\\Users\\ADMIN\\anaconda3\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
+    "import os\n",
+    "\n",
+    "folder_path = \"data/pack-pretest\"\n",
+    "\n",
+    "def load_query(folder_path):\n",
+    "    queries = []\n",
+    "\n",
+    "    # Set up translation model\n",
+    "    model_name = \"VietAI/envit5-translation\"\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(model_name)  \n",
+    "    model = AutoModelForSeq2SeqLM.from_pretrained(model_name)\n",
+    "    model = model.to('cuda')\n",
+    "\n",
+    "    for file in Path(folder_path).glob('*.txt'):\n",
+    "        with open(file, \"r\") as file:\n",
+    "            # Get query text\n",
+    "            text = \"\".join(file.read().splitlines())\n",
+    "            model_output = model.generate(tokenizer(text, return_tensors=\"pt\", padding=True).input_ids.to('cuda'), max_length=1024)\n",
+    "            text_en = tokenizer.batch_decode(model_output, skip_special_tokens=True)[0]\n",
+    "            text_en = text_en.replace(\"en: \", \"\")\n",
+    "\n",
+    "            # Get query type\n",
+    "            file_name = os.path.basename(file.name)\n",
+    "            base, extension = os.path.splitext(file_name)\n",
+    "            query_type = base.split(\"-\")[-1]\n",
+    "            \n",
+    "            queries.append([text_en, query_type])\n",
+    "    return queries\n",
+    "queries = load_query(folder_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "['A black, ice-powered boat. The boat is powered by a propeller engine that blows out the back from above. The boat is a rescue vehicle for a victim who fell into an icy lake.', 'kis']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(queries))\n",
+    "print(queries[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -53,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +122,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "363\n",
+      "363\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(embeddings))\n",
+    "print(len(embeddings_map))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,25 +172,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3046875  -  L01_V021\n",
-      "     n  pts_time   fps  frame_idx\n",
-      "64  65    223.24  25.0       5581\n",
-      "0.359619140625  -  L02_V011\n",
-      "     n  pts_time   fps  frame_idx\n",
-      "77  78    305.76  25.0       7644\n",
-      "0.288330078125  -  L10_V007\n",
+      "0.334716796875  -  L09_V017\n",
       "       n  pts_time   fps  frame_idx\n",
-      "267  268     967.4  25.0      24185\n"
+      "206  207     860.4  25.0      21510\n",
+      "0.31103515625  -  L05_V029\n",
+      "       n  pts_time   fps  frame_idx\n",
+      "175  176     755.0  25.0      18875\n",
+      "0.303466796875  -  L02_V031\n",
+      "       n  pts_time   fps  frame_idx\n",
+      "116  117    410.88  25.0      10272\n"
      ]
     }
    ],
+   "source": [
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "from PIL import Image, ImageFile\n",
+    "import requests\n",
+    "import torch\n",
+    "import os\n",
+    "\n",
+    "for query in queries:\n",
+    "    query_text = query[0]\n",
+    "    query_type = query[1]\n",
+    "\n",
+    "    if (query_type == 'kis'):    \n",
+    "        text_embedding = text_model.encode(query_text);\n",
+    "        text_embedding = text_embedding.astype(np.float16)\n",
+    "        max_score = 0\n",
+    "        max_score_video_idx = 0\n",
+    "        max_score_keyframe_idx = 0\n",
+    "\n",
+    "        for i in range(0, len(embeddings)):\n",
+    "            score = util.cos_sim(text_embedding, embeddings[i])\n",
+    "            max_img_idx = torch.argmax(score)\n",
+    "\n",
+    "            if (max_score < score[0][max_img_idx].item()):\n",
+    "                max_score = score[0][max_img_idx].item()\n",
+    "                max_score_video_idx = i\n",
+    "                max_score_keyframe_idx = max_img_idx.item()\n",
+    "        \n",
+    "        file = os.path.basename(embeddings_map[max_score_video_idx])\n",
+    "        base, extension = os.path.splitext(file)\n",
+    "        print(max_score, \" - \", base)\n",
+    "        print(keyframes_map[base].loc[keyframes_map[base]['n'] == max_score_keyframe_idx + 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from sentence_transformers import SentenceTransformer, util\n",
     "from PIL import Image, ImageFile\n",
@@ -145,11 +261,6 @@
     "    print(max_score, \" - \", base)\n",
     "    print(keyframes_map[base].loc[keyframes_map[base]['n'] == max_score_keyframe_idx + 1])"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
