AI Challenge 2024 - Patch 2

--- a/ai-challenge-2024/BERTScore.ipynb
+++ b/ai-challenge-2024/BERTScore.ipynb
@@ -2,70 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\ADMIN\\anaconda3\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "from transformers import BertTokenizer, BertModel\n",
-    "import torch\n",
-    "import numpy as np\n",
-    "\n",
-    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
-    "model = BertModel.from_pretrained(\"bert-base-uncased\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text1 = \"Cá mập trắng lớn thường sinh sống ở ven biển và ngoài khơi, nơi có nhiệt độ nước vào khoảng 12 và 24 °C (54 và 75 °F).\"\n",
-    "text2 = \"Cá mập trắng lớn là loài cá mập có kích thước lớn nhất\"\n",
+    "import json\n",
+    "from pathlib import Path\n",
+    "import os\n",
     "\n",
-    "inputs1 = tokenizer(text1, return_tensors=\"pt\", padding=True, truncation=True)\n",
-    "inputs2 = tokenizer(text2, return_tensors=\"pt\", padding=True, truncation=True)\n",
+    "def read_image_captions(folder_path):\n",
+    "    image_captions = {}\n",
     "\n",
-    "outputs1 = model(**inputs1)\n",
-    "outputs2 = model(**inputs2)\n",
+    "    for file in Path(folder_path).glob(\"*.jsonl\"):\n",
+    "        file_image_captions = read_jsonl_to_list(file)\n",
+    "        file_base, extension = os.path.splitext(os.path.basename(file))\n",
+    "        image_captions[file_base] = file_image_captions\n",
+    "    return image_captions\n",
     "\n",
-    "# embeddings1 = outputs1.last_hidden_state.mean(dim=1).detach().numpy()\n",
-    "# embeddings2 = outputs2.last_hidden_state.mean(dim=1).detach().numpy()\n",
+    "def read_jsonl_to_list(file_path):\n",
+    "    result = []\n",
+    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "        for line in file:\n",
+    "            try:\n",
+    "                json_obj = json.loads(line)\n",
+    "                for key, value in json_obj.items():\n",
+    "                    result.append([key.split('.')[0], value])\n",
+    "            except json.JSONDecodeError:\n",
+    "                print(f\"Skipping invalid JSON line: {line}\")\n",
+    "    return result\n",
     "\n",
-    "# similarity = np.dot(embeddings1, embeddings2.T) / (np.linalg.norm(embeddings1) * np.linalg.norm(embeddings2))\n",
-    "# print(\"Similarity between the texts: {:.4f}\".format(similarity[0][0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Similarity between the texts: 0.9235\n",
-      "0.9234782\n"
-     ]
-    }
-   ],
-   "source": [
-    "embeddings1 = outputs1.last_hidden_state.mean(dim=1).detach().numpy()\n",
-    "embeddings2 = outputs2.last_hidden_state.mean(dim=1).detach().numpy()\n",
     "\n",
-    "similarity = np.dot(embeddings1, embeddings2.T) / (np.linalg.norm(embeddings1) * np.linalg.norm(embeddings2))\n",
-    "print(\"Similarity between the texts: {:.4f}\".format(similarity[0][0]))\n",
-    "print(similarity[0][0])"
+    "image_captions = read_image_captions(\"data/image-caption\")"
    ]
   },
   {
@@ -73,7 +40,48 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from transformers import BertTokenizer, BertModel\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "model = BertModel.from_pretrained(\"bert-base-uncased\")\n",
+    "device = torch.device(\"cuda\")\n",
+    "model.to('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_input = \"\"\n",
+    "inputs_sample = tokenizer(text_input, return_tensors=\"pt\", padding=True, truncation=True)\n",
+    "inputs_sample = {k: v.to(device) for k, v in inputs_sample.items()}  # Move input tensors to GPU\n",
+    "outputs_sample = model(**inputs_sample)\n",
+    "embeddings_sample = outputs_sample.last_hidden_state.mean(dim=1).detach().cpu().numpy()\n",
+    "\n",
+    "max_caption = None\n",
+    "max_score = 0\n",
+    "\n",
+    "# Assuming image_captions is defined elsewhere in your code\n",
+    "for video in image_captions:\n",
+    "    for caption in image_captions[video]:\n",
+    "        inputs_candidate = tokenizer(caption, return_tensors=\"pt\", padding=True, truncation=True)\n",
+    "        inputs_candidate = {k: v.to(device) for k, v in inputs_candidate.items()}  # Move input tensors to GPU\n",
+    "        outputs_candidate = model(**inputs_candidate)\n",
+    "        embeddings_candidate = outputs_candidate.last_hidden_state.mean(dim=1).detach().cpu().numpy()\n",
+    "        \n",
+    "        similarity = np.dot(embeddings_sample, embeddings_candidate.T) / (np.linalg.norm(embeddings_sample) * np.linalg.norm(embeddings_candidate))\n",
+    "        \n",
+    "        if similarity[0][0] > max_score:\n",
+    "            max_score = similarity[0][0]\n",
+    "            max_caption = caption\n",
+    "print(max_caption)\n",
+    "print(max_score)"
+   ]
   }
  ],
  "metadata": {
