UIT-DSC-Image-Caption

--- a/dsc-uit/sample.ipynb
+++ b/dsc-uit/sample.ipynb
@@ -20,7 +20,13 @@
     "\n",
     "def load_image(image_path, size):\n",
     "    image = Image.open(image_path).convert(\"RGB\").resize(size=size)\n",
-    "    return np.array(image)\n"
+    "    return np.array(image)\n",
+    "\n",
+    "annotation_path = \"data/vimmsd-warmup.json\"\n",
+    "test_annotation_path = \"data/vimmsd-test.json\"\n",
+    "image_folder_path = \"data/warmup-images\"\n",
+    "\n",
+    "data = load_annotation(annotation_path)\n"
    ]
   },
   {
@@ -30,11 +36,6 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "annotation_path = \"data/vimmsd-warmup.json\"\n",
-    "image_folder_path = \"data/warmup-images\"\n",
-    "\n",
-    "data = load_annotation(annotation_path)\n",
     "\n",
     "for i, id in enumerate(data):\n",
     "    image_path = f\"{image_folder_path}/{data[id]['image']}\"\n",
