DSC-UIT-Embeddings

--- a/ai-challenge-2024/system.ipynb
+++ b/ai-challenge-2024/system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "folder_path = 'data/clip-features-32'\n",
     "embeddings, embeddings_map = load_clip_features(folder_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(embeddings[3]))"
    ]
   },
   {
@@ -188,7 +197,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sentence_transformers import SentenceTransformer, util\n",
     "import torch\n",
     "import nltk\n",
     "from PIL import Image\n",
