--- a/dsc-uit/sample.ipynb
+++ b/dsc-uit/sample.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import json\n",
     "import numpy as np\n",
     "from PIL import Image\n",
@@ -26,7 +25,7 @@
     "test_annotation_path = \"data/vimmsd-test.json\"\n",
     "image_folder_path = \"data/warmup-images\"\n",
     "\n",
-    "data = load_annotation(annotation_path)\n"
+    "data = load_annotation(annotation_path)"
    ]
   },
   {
