Update Image Labels Sample

--- a/dsc-uit/create-embeddings.ipynb
+++ b/dsc-uit/create-embeddings.ipynb
@@ -2,9 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ADMIN\\anaconda3\\Lib\\site-packages\\sentence_transformers\\cross_encoder\\CrossEncoder.py:11: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm, trange\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\ADMIN\\anaconda3\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from PIL import Image, ImageFile\n",
     "import os\n",
@@ -41,22 +58,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing images: 100%|██████████| 10805/10805 [04:07<00:00, 43.58it/s]"
+      "c:\\Users\\ADMIN\\anaconda3\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n",
+      "Processing images:   0%|          | 0/1413 [00:00<?, ?it/s]c:\\Users\\ADMIN\\anaconda3\\Lib\\site-packages\\transformers\\models\\clip\\modeling_clip.py:480: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\cb\\pytorch_1000000000000\\work\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
+      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n",
+      "Processing images: 100%|██████████| 1413/1413 [00:36<00:00, 38.74it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of images processed: 10805\n",
-      "Shape of embeddings: (10805, 512)\n"
+      "Number of images processed: 1413\n",
+      "Shape of embeddings: (1413, 512)\n"
      ]
     },
     {
@@ -71,7 +92,7 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "img_model = SentenceTransformer('clip-ViT-B-32', device=device)\n",
     "\n",
-    "directory = \"data/train-images\"\n",
+    "directory = \"data/dev-images\"\n",
     "image_paths = list(load_image_paths(directory))\n",
     "embeddings_map, img_embeddings = process_images(image_paths, img_model)\n",
     "\n",
@@ -81,30 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Embeddings saved to data/embeddings/train_image_embeddings.npy\n"
+      "Embeddings saved to data/embeddings-public-test/embeddings.npy\n"
      ]
     }
    ],
    "source": [
-    "embeddings_map.to_csv(\"data/embeddings/train_image_embeddings.csv\", header=None, index=0)\n",
-    "output_embeddings = \"data/embeddings/train_image_embeddings.npy\"\n",
+    "embeddings_map.to_csv(\"data/embeddings-public-test/embeddings-map.csv\", header=None, index=0)\n",
+    "output_embeddings = \"data/embeddings-public-test/embeddings.npy\"\n",
     "np.save(output_embeddings, img_embeddings)\n",
     "print(f\"Embeddings saved to {output_embeddings}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
